Refactor footer and locale functionality

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,11 @@
 * {
-    font-family: 'Source Code Pro', monospace;
-    font-size: 16px;
+  font-family: "Source Code Pro", monospace;
+  font-size: 16px;
 }
 
 body {
-    background-color: #182128;
-    color: #D8D8D8;
-    overflow: hidden;
-    margin: 0;
+  background-color: #182128;
+  color: #d8d8d8;
+  overflow: hidden;
+  margin: 0;
 }
