Refactor UI components and add color variables

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,8 @@
 }
 
 body {
-  background-color: #182128;
-  color: #d8d8d8;
+  background-color: $dark;
+  color: $light;
   overflow: hidden;
   margin: 0;
 }
