Add image and styling for homepage background

--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -4,10 +4,10 @@ $primary: #4caf50;
 $secondary: #ff5722;
 
 $dark: #182128;
-$darker: #0D1216;
-$veil: rgba(0, 0, 0, 0.37);
+$darker: #0d1216;
+$veil: rgba(0, 0, 0, 0.8);
 $light: #d8d8d8;
 $gray: #545454;
 
-$green: #A2C755;
-$blue: #4690FF;
+$green: #a2c755;
+$blue: #4690ff;
