--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,10 @@
 * {
   font-family: "Source Code Pro", monospace;
-  font-size: 16px;
+  font-size: 14px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+  }
 }
 
 body {
@@ -8,4 +12,12 @@ body {
   color: $light;
   overflow: hidden;
   margin: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.invisible {
+  visibility: hidden;
 }
